# sparsecoding

./: .gitignore  CMakeLists.txt  NOTICE
include/: App.hpp  DictionaryLearner.hpp
src/: App.cpp  DictionaryLearner.cpp  Main.cpp
